every api updated with new error handling
